Accordion/Accordion.module.css
.accordion {
	display: flex;
	flex-direction: column;
	gap: 8px;

	.header {
		display: flex;
		justify-content: space-between;
		align-items: center;
		user-select: none;
		cursor: pointer;
		padding: 6px 12px;
		border-radius: 12px;
		transition: var(--animation);

		&:hover {
			background-color: var(--md-sys-color-surface-variant);
		}
	}

	.content {
		display: flex;
		flex-direction: column;
		gap: 8px;
	}
}

